--- a/src/app/modules/work/components/childcare-portal/childcare-portal.component.html
+++ b/src/app/modules/work/components/childcare-portal/childcare-portal.component.html
@@ -29,76 +29,81 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="image-event">
-        <img src="./assets/images/works/child2.jpg">
-    </div>
-    <div class="approach">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-9">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="container">
                     <h2>Approach</h2>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="container">
                     <p>Kids should be encouraged and motivated through our designs which will help them to think and grow with joy in their early age</p>
                 </div>
             </div>
         </div>
     </div>
+    <div class="image-event">
+        <img src="./assets/images/works/child2.jpg">
+    </div>
     <div class="target-strategy">
         <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="container">
             <div class="target">
-                <div class="row">
-                    <div class="col-md-4">
-                        <h6>Target Audience</h6>
-                    </div>
-                    <div class="col-md-8">
-                        <p>Kids of age 6 - 12</p>
-                        <p>Coordinators who takes care of kids</p>
-                    </div>
+                <div class="img">
+                    <img src="./assets/images/works/strategy.png">
                 </div>
+                <h6>Target Audience</h6>
+                <p>Kids of age 6 - 12</p>
+                <p>Coordinators who takes care of kids</p>
             </div>
+            </div>
+        </div>
+            <div class="col-md-6">
+                <div class="container">
             <div class="strategy">
-                <div class="row">
-                    <div class="col-md-4">
-                        <h6>Strategy</h6>
-                    </div>
-                    <div class="col-md-8">
-                        <p>The platform should encourage students and motivate them in what they do and enable them to do things that makes them happy with the help of the technology.</p>
-                    </div>
+                <div class="img">
+                    <img src="./assets/images/works/strategy.png">
+                </div>
+                <h6>Strategy </h6>
+             <p>The platform should encourage students and motivate them in what they do and enable them to do things that makes them happy with the help of the technology.</p> 
                 </div>
             </div>
-            
+        </div>
+        </div>
         </div>
     </div>
     <div class="needs-challenges">
         <div class="row">
-            <div class="col-md-5 left-red">
-                <div class="container">
-                    <h6>The Challenge</h6>
-                    <p>The challenge was to create a intuitive prototype which the kids can use to create new things and show their love for their donors.</p>
-                </div>
-            </div>
+            <div class="container">
             <div class="col-md-7">
-                <div class="container">
+                    <h2>The Challenge</h2>
+                    <hr class="line"> 
+                    <p>The challenge was to create a intuitive prototype which the kids can use to create new things and show their love for their donors.</p>
                     <div class="needs">
                         <div class="needs-right">
-                           <h6>Solutions</h6>
-                            <p>Character specific interface themes.
-                            <p>Simple and Enjoyable interactive games for learning reducing difficulty</p>
-                            <p>Functionalities that lets them show their love and engage with their sponsors in a much easy and fun way.</p>
-                            <p>Age specific features to cater a larger crowd</p>
-                            <p>Remote data loading to allow usage even in regions of no network connectivity</p>
+                           <h2>Solutions</h2>
+                           <hr class="line"> 
+                            <p> - Character specific interface themes.
+                            <p> - Simple and Enjoyable interactive games for learning reducing difficulty</p>
+                            <p> - Functionalities that lets them show their love and engage with their sponsors in a much easy and fun way.</p>
+                            <p> - Age specific features to cater a larger crowd</p>
+                            <p> - Remote data loading to allow usage even in regions of no network connectivity</p>
                         </div>
                      </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="background">
+    </div>
     <div class="other-case-studies">
         <div class="row">
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn">See All Works <img src="./assets/images/rightarrow-red.svg"></div>
+                    <div class="btn btnn">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -121,4 +126,16 @@
             </div>
         </div>
     </div>
+    <div class="craft">
+        <div class="container">
+          <div class="row">
+             <div class="col-md-4">
+             <h2>Let's craft design together!</h2>
+          </div>
+             <div class="button">
+                 <div class="btn-white">Let's Talk</div>
+             </div>
+        </div>
+        </div>
+     </div>
 </div>
