--- a/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
+++ b/src/app/modules/work/components/automobile-usability/automobile-usability.component.scss
@@ -2,7 +2,8 @@
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
 h2{
-    font-size: 56px;
+    font-size: 57px;
+    font-family: Baskerville;
     @include media-breakpoint-down(md) {
         font-size: 36px;
     }
@@ -16,48 +17,19 @@ p{
 }
 h6{
     font-size: 36px;
+    font-family: Muli;
     @include media-breakpoint-down(md) {
         font-size: 28px;
     }
-}  
+} 
     .banner{
         background-color: #6DAFD8;
         position: relative;
         color: #FFFFFF;
-        padding-top: 150px;
-        .banner-header{
-            padding: 150px 0px;
-        }
+        //padding-top: 150px;
         h6{
             font-weight: 300;
             margin-top: 30px;
-        }
-        @include media-breakpoint-down(lg){
-            .banner-header{
-                padding: 150px 0px;
-            }
-        }
-        @include media-breakpoint-down(md){
-            .banner-header{
-                padding: 85px 0px;
-            }
-        }
-    }
-    .about-project{
-        background-color: #FCFCFC;
-        padding: 200px 0px;
-        .row{
-            margin-right: 0;
-            margin-left: 0;
-        }
-        @include media-breakpoint-down(lg){
-            padding: 200px 0px;
-        }
-        @include media-breakpoint-down(md){
-            padding: 150px 0px;
-        }
-        @include media-breakpoint-down(sm){
-            padding: 80px 0px;
         }
     }
     .image-event{
@@ -67,102 +39,82 @@ h6{
         @include media-breakpoint-down(sm){
             img{
                 width: 100%;
-                display: none !important;
+                //display: none !important;
             }  
         }
     }
     .approach{
-        background-color: #3C3C3C;
-        color: #FCFCFC;
-        padding: 200px 0px;
-        h2{
-            margin-bottom: 30px;
+        background-color: #FCFCFC;
+        color: #3D3D3D;
+        padding: 100px 0px;
+        .row{
+            padding-bottom: 50px;
+
         }
-        // p{
-        //     line-height: 40px;
-        // }
+        h6{
+            font-size: 26px;
+            font-family: Baskerville;
+        }
+        p{
+            font-size: 16px;
+            font-family: Muli;
+            line-height: 50px;
+        }
         @include media-breakpoint-down(lg){
-            padding: 200px 0px;
+            padding: 100px 0px;
+            .row{
+                padding-bottom: 40px;
+    
+            }
         }
         @include media-breakpoint-down(md){
-            padding: 150px 0px;
+            padding: 50px 0px;
+            .row{
+                padding-bottom: 30px;
+    
+            }
         }
         @include media-breakpoint-down(sm){
-            padding: 80px 0px;
+            padding: 30px 0px;
+            .row{
+                padding-bottom: 20px;
+    
+            }
             h2{
                 font-size: 36px;
                 margin-bottom: 30px;
             }
-            // p{
-            //     font-size: 24px;
-            //     line-height: 40px;
-            // }
         }
     }
-    .target-strategy{
-        background-color: #FCFCFC;
-        color: #3D3D3D;
-        padding: 150px 0px;
-        .strategy{
-            margin-top: 30px;
-        }
-        @include media-breakpoint-down(sm){
-            padding: 80px 0px;
-        }
-    }
-    .needs-challenges{
-        background-color: #6DAFD8;
-        color: #FCFCFC;
-        //margin-bottom: 70px;
-        .left{
-            padding: 50px 0px;
-        }
-        .needs{
-            padding: 50px 0px;
-        }
+    .craft{
+        background-color: #C3343C;
+        padding-top: 40px;
+        padding-bottom: 40px;
         h2{
-            font-weight: 300;
+            font-size: 57px;
+            font-family: Baskerville;
+            color: #FCFCFC;
         }
-        h6{
-            margin-bottom: 25px;
+        .button{
+            margin-top: 80px;
         }
-        p{
-            font-weight: 300;
-        }
-        @include media-breakpoint-down(lg){
-            padding: 50px 0px;
-            h1{
-                font-size: 100px;
-            }
-            h2{
-                padding-left: 40px;
-            }
+        .btn-white{
+            border: 2px solid #FFFFFF;
+            color: #FCFCFC;
+             font-size: 18px;
+            padding: 8px;
+            border-radius: 0px;
+            font-family: Muli;
         }
         @include media-breakpoint-down(md){
-            padding: 50px 0px;
-            h1{
-                font-size: 72px; 
-            }
             h2{
-                font-size: 36px;
+                font-size: 37px;
             }
         }
         @include media-breakpoint-down(sm){
-            padding: 0px 0px;
-            margin-bottom: 0px;
-            h2{
-                padding-left: 15px;
-            }
-            .left{
-                padding: 80px 0px 0 0;
-            }
-            .needs{
-                height: 530px;
-                overflow: hidden;
-                padding: 0px 0px;
-            }
-            .needs-right{
-                padding: 30px 0 0 0;
+            .button{
+                margin-top: 50px;
+               padding-left: 15px;
             }
         }
     }
@@ -177,25 +129,27 @@ h6{
         }
        .left{
            padding: 40px 130px 80px 90px;
-           background-color: #C3343C;
+           background-color: #EBEBEB;
            h2{
-               font-size: 36px;
-               font-weight: 400;
-               color: #FFF;
-               margin-top: 120px;
-               margin-bottom: 80px;
-           }
-           .btn{
-               background-color: #FFF;
-               border-radius: 0;
-               color: #C3343C;
-               cursor: pointer;
-               font-size: 20px;
-               font-weight: 400;
-                img{
-                    padding-left: 12px;
-                }
-           }
+            font-size: 57px;
+            font-family: Baskerville;
+            color: #282829;
+            margin-top: 120px;
+            margin-bottom: 80px;
+        }
+        .btnn{
+            border: 2px solid #0D0D0D;
+            border-radius: 0;
+            color: #0D0D0D;
+            cursor: pointer;
+             font-size: 18px;
+            font-family: Muli;
+            &:hover{
+                background-color: #C3343C;
+                color: #FFFFFF;
+                border: 2px solid #E2E2E2;
+            }
+        }
            @include media-breakpoint-down(md){
             padding: 100px 40px 80px 30px;
             h2{
@@ -219,15 +173,15 @@ h6{
                    }
                }
                h3{
-                   font-size: 36px;
-                   font-weight: 500;
-                   margin: 40px 130px 20px 40px;
-               }
-               h4{
-                   font-size: 16px;
-                   font-weight: 400;
-                   margin: 0 0 10px 40px;
-               }
+                font-size: 36px;
+                font-family: Baskerville;
+                margin: 40px 130px 20px 40px;
+            }
+            h4{
+             font-family: Muli;
+              font-size: 18px;
+                margin: 0 0 10px 40px;
+            }
            }
            @include media-breakpoint-down(md){
             .class{
