--- a/src/app/modules/work/components/skill-development/skill-development.component.html
+++ b/src/app/modules/work/components/skill-development/skill-development.component.html
@@ -2,30 +2,28 @@
     <div class="banner">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 ordertwo">
+                <div class="col-md-5 ordertwo">
                     <div class="banner-header">
                         <h2>A designers platform for creative upskill</h2>
                         <h6>UX <span>. UI .</span><span> Mobile </span><span>. Web .</span><span> B2C</span></h6>
                     </div>
                 </div>
-                <div class="col-md-6 orderone">
+                <div class="col-md-7 orderone">
                     <div class="container">
-                        <img src="./assets/images/works/skill1.png">
+                        <img src="./assets/images/works/upskill.png">
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div class="about-project">
+        <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <div class="container">
                     <h2>About Project</h2>
-                </div>
             </div>
             <div class="col-md-8">
-                <div class="container">
-                    <p>Platform for designers, design aspirants/students and mentor to collaborate and share their ideology, design methods, process and uplift their skills in the Design domain.</p>
+                <p>Platform for designers, design aspirants/students and mentor to collaborate and share their ideology, design methods, process and uplift their skills in the Design domain.</p>
                 </div>
             </div>
         </div>
@@ -35,12 +33,14 @@
     </div>
     <div class="approach">
         <div class="container">
-            <div class="row">
-                <div class="col-md-9">
+        <div class="row">
+            <div class="col-md-4">
                     <h2>Approach</h2>
-                    <p>The way designers need to be evaluated is by looking at their skills and not their years of experience, this is the base idea that this platform was designed upon</p>
-                </div>
             </div>
+            <div class="col-md-8">
+                <p>The way designers need to be evaluated is by looking at their skills and not their years of experience, this is the base idea that this platform was designed upon</p>
+            </div>
+        </div>
         </div>
     </div>
     <div class="target-strategy">
@@ -82,19 +82,19 @@
                 <div class="needs">
                     <div class="needs-right">
                        <h6>Needs</h6>
-                       <p> Awareness among younger generation on Creative Job</p>
-                       <p> Understand how the field works</p>
-                       <p> Need a mentor to Guide</p>
-                       <p> Portfolio review by experts</p>
-                       <p> Know current trends and new methods to debate with Industry vetrans</p>
+                       <p> - Awareness among younger generation on Creative Job</p>
+                       <p> - Understand how the field works</p>
+                       <p> - Need a mentor to Guide</p>
+                       <p> - Portfolio review by experts</p>
+                       <p> - Know current trends and new methods to debate with Industry vetrans</p>
                     </div>
                     <div class="needs-right">
                         <h6>Challenges</h6>
-                        <p> Finding the right people to learn from</p>
-                        <p> If the portfolio that they do is up to industry standards</p>
-                        <p> To know people who are in the industries that one is interested in</p>
-                        <p> To know what kind of work does a designer do in different offices</p>
-                        <p> Difficult to find and cook new and tasty dishes every now and then</p>
+                        <p> -  Finding the right people to learn from</p>
+                        <p> - If the portfolio that they do is up to industry standards</p>
+                        <p> - To know people who are in the industries that one is interested in</p>
+                        <p> - To know what kind of work does a designer do in different offices</p>
+                        <p> - Difficult to find and cook new and tasty dishes every now and then</p>
                     </div>
                  </div>
             </div>
@@ -127,18 +127,41 @@
     <div class="typography-image">
         <img src="./assets/images/works/skill4.jpg">
     </div>
-    <div class="typography-image">
-        <img src="./assets/images/works/skill5.png">
+    <div class="approach">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                    <h2>Mobile App</h2>
+                    <p>The mobile Application was designed with features that users can use on the go and thus making the experience easy and smooth</p>
+            </div>
+            <div class="col-md-7">
+                <img src="./assets/images/works/skill5.png">
+            </div>
+        </div>
+        </div>
     </div>
-    <div class="typography-image">
-        <img src="./assets/images/works/skill6.png">
+    <div class="approach">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                    <h2>Desktop Login</h2>
+                    <p>A Desktop login provided easy
+                        Access for different features and functionalities that needed the use of desktop </p>
+            </div>
+            <div class="col-md-7">
+                <img src="./assets/images/works/skill6.png">
+            </div>
+        </div>
+        </div>
+    </div>
+    <div class="background">
     </div>
     <div class="other-case-studies">
         <div class="row">
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn">See All Works <img src="./assets/images/rightarrow-red.svg"></div>
+                    <div class="btn btnn">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -161,4 +184,16 @@
             </div>
         </div>
     </div>
+    <div class="craft">
+        <div class="container">
+          <div class="row">
+             <div class="col-md-4">
+             <h2>Let's craft design together!</h2>
+          </div>
+             <div class="button">
+                 <div class="btn-white">Let's Talk</div>
+             </div>
+        </div>
+        </div>
+     </div>
 </div>
